<resources>

    <string name="app_name">Book Store</string>

    <!-- EmptyView message -->
    <string name="add_entry_hint">To add an entry,\nclick the button below.</string>

    <!-- List Item Strings -->
    <string name="item_name">Book Name</string>
    <string name="item_price">Price:</string>
    <string name="item_quantity">Quantity:</string>
    <string name="item_sale_label">Sale</string>
    <string name="zero">0</string>

    <!-- Content descriptions -->
    <string name="empty_view_description">Empty database image</string>
    <string name="button_remove_item">Reduce the number of items</string>
    <string name="button_add_item">Enlarge the number of items</string>
    <string name="button_call_supplier">Call to supplier</string>

    <!-- Errors -->
    <string name="requires_name">Book requires a name</string>
    <string name="requires_valid_price">Book requires valid price</string>
    <string name="requires_valid_quantity">Book requires valid quantity</string>
    <string name="error_inserting">Error with saving book</string>
    <string name="error_updating">Error with updating book</string>
    <string name="error_dialog">An unknown dialog is called.</string>
    <string name="error_deleting">Error with deleting book</string>

    <!-- Messages and dialogs -->
    <string name="book_saved">Book saved</string>
    <string name="book_updated">Book updated</string>
    <string name="book_deleted">Book deleted</string>
    <string name="request_delete">Are you sure you want to delete the book?</string>
    <string name="request_exit">Do you want to exit without saving?</string>
    <string name="label_delete">Delete</string>
    <string name="label_exit">Exit</string>
    <string name="label_cancel">Cancel</string>
    <string name="nothing_to_save">There is nothing to save</string>

    <!-- Editor Menu -->
    <string name="action_save">Save a book</string>
    <string name="action_delete">Delete a book</string>

    <!-- Editor string values -->
    <string name="title_add_book">Add a book</string>
    <string name="title_edit_book">Edit book</string>
    <string name="label_name">Name:</string>
    <string name="hint_name">Name</string>
    <string name="label_price">Price:</string>
    <string name="hint_price">Price</string>
    <string name="label_quantity">Quantity:</string>
    <string name="hint_quantity">Quantity</string>
    <string name="label_supplier_name">Supplier name:</string>
    <string name="hint_supplier_name">Supplier name</string>
    <string name="label_supplier_phone">Supplier phone:</string>
    <string name="hint_supplier_phone">Supplier phone</string>
</resources>
