<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/item_space">

    <!-- Item name -->
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorPrimaryDark"
        tools:text="@string/item_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="@dimen/small_space">

        <!-- Item quantity -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/LabelTextView"
                    android:text="@string/item_quantity" />

                <TextView
                    android:id="@+id/tv_quantity"
                    style="@style/ValueTextView" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_sale"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sale_button_height"
                android:layout_marginTop="@dimen/small_space"
                android:background="@drawable/button_background"
                android:text="@string/item_sale_label"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <!-- TextView as Divider -->
        <TextView
            android:layout_width="@dimen/divider_size"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/small_space"
            android:layout_marginRight="@dimen/small_space"
            android:background="@color/colorPrimary" />

        <!-- Item Price -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelTextView"
                android:text="@string/item_price" />

            <TextView
                android:id="@+id/tv_price"
                style="@style/ValueTextView" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>